--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^11.2.12",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
